# MrPotatoHead

./: CMakeLists.txt  README.md
include/learnopengl/: camera.h
libs/imgui/: CMakeLists.txt
resources/: program_state.txt
resources/objects/cowboy/: hay.mtl
resources/objects/glasses/: glasses.mtl
resources/objects/mr_potato_head/: final.mtl  final2.mtl  hat.mtl  legs.mtl
resources/objects/potato/: body.mtl  hat.mtl  potato.mtl
resources/shaders/: fragment_shader.fs  model_lighting.fs  vertex_shader.vs
src/: clang-tidy.yaml  google_main.cpp  main.cpp
